# contextor

./: .gitignore  CHANGELOG.md  README.md  README.test.md  pyproject.toml  requirements.txt  setup.py
codecontextor/: main.py
contextor/: cli.py  main.py  selection.py  utils.py
contextor/signatures/: __init__.py  javascript.py  processor.py
tests/: test_javascript.py  test_main.py  test_performance.py
